# grace

./: .envrc  .gitattributes  .gitignore  .hlint.yaml  .stylish-haskell.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cabal.haskell-ci  cabal.project  default.nix  flake.nix  garnix.yaml  grace.cabal  index.html  shell.nix
.github/workflows/: deploy.yml  haskell-ci.yml  haskell.yml
Prelude/: package.ffg
Prelude/Bool/: equal.ffg
Prelude/Double/: equal.ffg  greaterThan.ffg  lessThan.ffg  negate.ffg  show.ffg
Prelude/Integer/: clamp.ffg  odd.ffg  toNatural.ffg
Prelude/List/: drop.ffg  equal.ffg  fold.ffg  length.ffg  null.ffg  package.ffg  replicate.ffg  select.ffg
Prelude/Text/: concatMap.ffg  concatSep.ffg  equal.ffg
dependencies/: grace-ghcjs.nix  grace.nix  openai.nix
doctest/: Main.hs
examples/: chaining.ffg  code.ffg  edd-narrative.ffg  emotion-wheel.ffg  eval.ffg  history.ffg  learn-in-y-minutes.ffg  mustache.ffg  mustache.grace  poem.ffg  prompt.ffg  reddit-haskell.ffg  taxes.ffg  tools.ffg  transform-text.ffg  users.ffg  users.grace
examples/bluesky/: 2025-11-27.ffg
examples/tutorial/: checkboxes.ffg  coding.ffg  conclusion.ffg  data.ffg  functions.ffg  hello.ffg  imports.ffg  lists.ffg  prelude.ffg  prompting.ffg  variables.ffg
ghc/Grace/: DataFile.hs  HTTP.hs  Width.hs
ghcjs/Grace/: DataFile.hs  HTTP.hs  Size.hs  Width.hs
grace/: grace.cabal  shell.nix
grace-core/: grace-core.cabal  shell.nix
grace-core/examples/: mustache.grace  reddit-haskell.grace
grace-core/src/Grace/: Context.hs  Domain.hs  Existential.hs  Import.hs  Infer.hs  Input.hs  Interpret.hs  Lexer.hs  Location.hs  Monotype.hs  Normalize.hs  Parser.hs  Pretty.hs  Syntax.hs  TH.hs  Type.hs
grace-core/src/Grace/Import/: Resolver.hs
grace-core/tasty/: Main.hs
grace-core/tasty/Grace/Test/: Resolver.hs
grace-core/tasty/data/complex/: alternatives-hole-input.ffg  arithmetic-output.ffg  arithmetic-type.ffg  double-negation-output.ffg  exhaust-type-variable-alphabet-output.ffg  exhaust-type-variable-alphabet-type.ffg  existential-records-input.ffg  forall-hole-output.ffg  forall-hole-type.ffg  higher-rank-annotation-output.ffg  higher-rank-annotation-type.ffg  higher-rank-subtype-input.ffg  hole-check-input.ffg  hole-check-output.ffg  hole-check-type.ffg  instantiate-nested-type-input.ffg  instantiate-quantifiers-input.ffg  instantiate-quantifiers-type.ffg  instantiate-variable-type.ffg  negate-subtype-input.ffg  negate-subtype-type.ffg  numeric-subtyping-output.ffg  preserve-row-input.ffg  principle-of-explosion-type.ffg  real-less-than-subtype-input.ffg  remote-transitive-import-stderr.txt  separators-input.ffg  separators-output.ffg  shadowing-type.ffg  simplifications-input.ffg  simplifications-output.ffg  simplifications-type.ffg  skolem-function-type-input.ffg  solve-fields-input.ffg  triple-field-output.ffg  triple-field-type.ffg  unbound-alternatives-variable-input.ffg  unbound-alternatives-variable-stderr.txt  unify-unsolved-input.ffg  unify-unsolved-type.ffg  (+2 more)
grace-core/tasty/data/error/parse/: incomplete-escape-input.ffg  incomplete-escape-stderr.txt
grace-core/tasty/data/error/resolve/: empty-environment-variable-input.ffg  empty-environment-variable-stderr.txt  environment-authority-stderr.txt  environment-leading-slash-input.ffg  environment-leading-slash-stderr.txt  environment-missing-input.ffg  environment-missing-stderr.txt  environment-variable-slash-input.ffg  environment-variable-slash-stderr.txt  file-authority-stderr.txt  file-missing-path-stderr.txt  host-not-found-input.ffg  host-not-found-stderr.txt  invalid-destination-host-stderr.txt  invalid-utf8-input.ffg  invalid-utf8-stderr.txt  remote-file-not-found-stderr.txt  remote-referentially-insane-stderr.txt
grace-core/tasty/data/error/type/: alternatives-variable-input.ffg  alternatives-variable-stderr.txt  impredicative-polymorphism-input.ffg  invalid-plus-annotation-input.ffg  invalid-plus-annotation-stderr.txt  invalid-times-annotation-input.ffg  invalid-times-annotation-stderr.txt  invalid-times-operands-input.ffg  invalid-times-operands-stderr.txt  merge-wrong-type-input.ffg  merge-wrong-type-stderr.txt  occurs-type-backwards-input.ffg  occurs-type-backwards-stderr.txt  unbound-type-stderr.txt  union-mismatch-left-extra-stderr.txt  union-mismatch-right-extra-stderr.txt  union-variable-mismatch-input.ffg
grace-core/tasty/data/json/: colors-type.ffg  geoip-input.ffg  geoip-type.ffg  geoip.json  menu2-input.ffg  menu2-type.ffg  products-input.ffg  recipes-type.ffg  server-type.ffg  twitter-type.ffg  web-app-input.ffg  web-app-output.ffg  widget-type.ffg
grace-core/tasty/data/unit/: append-simplify-type.ffg  field-input.ffg  integer-abs-input.ffg  integer-odd-input.ffg  json-input.ffg  json-output.ffg  list-append-simplify-type.ffg  list-drop-output.ffg  list-equal-input.ffg  list-fold-input.ffg  list-head-input.ffg  list-indexed-input.ffg  list-indexed-type.ffg  list-last-output.ffg  list-length-input.ffg  list-map-input.ffg  merge-input.ffg  natural-even-input.ffg  natural-show-input.ffg  real-equal-input.ffg  real-less-than-input.ffg  remote-import-output.ffg
grace-resolver-builtin/: Setup.hs  grace-resolver-builtin.cabal
grace-resolver-builtin/src/Grace/Resolver/: Builtin.hs
grace-resolver-builtin/tasty/: Main.hs
grace/examples/: reddit-haskell.json
grace/grace/: Main.hs
grace/src/: Grace.hs
grace/src/Grace/: Repl.hs
grace/tasty/: Main.hs
prelude/: package.ffg
prelude/bool/: and.ffg  not.ffg  or.ffg  package.ffg  show.ffg
prelude/double/: greaterThanOrEqual.ffg  lessThanOrEqual.ffg  negative.ffg  nonNegative.ffg  nonPositive.ffg  positive.ffg
prelude/integer/: abs.ffg  clamp.ffg  even.ffg  negate.ffg  package.ffg  product.ffg  sum.ffg  toNatural.ffg
prelude/list/: all.ffg  any.ffg  concat.ffg  concatMap.ffg  generate.ffg  head.ffg  index.ffg  indexed.ffg  last.ffg  map.ffg  null.ffg  package.ffg  reject.ffg  replicate.ffg  reverse.ffg  select.ffg  (+1 more)
prompts/: abnf.md  inference.md
src/: Grace.hs
tasty/: Main.hs
try-grace/: Main.hs
website/: index.html
(+775 files in other folders)
