cabal-version:       >=1.10
name:                grace
version:             1.0.0
license-file:        LICENSE
author:              Gabriella Gonzalez
maintainer:          Gabriel439@gmail.com
build-type:          Simple

library
  hs-source-dirs:      src
  build-depends:       base
                     , Earley
                     , ansi-terminal
                     , containers
                     , filepath
                     , generic-lens
                     , haskeline
                     , http-client
                     , http-client-tls
                     , http-types
                     , insert-ordered-containers
                     , lens
                     , megaparsec
                     , modern-uri
                     , mtl
                     , optparse-applicative
                     , parser-combinators
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , repline
                     , safe-exceptions
                     , scientific
                     , string-interpolate
                     , template-haskell
                     , terminal-size
                     , text
                     , unordered-containers

  exposed-modules:     Grace
                     , Grace.Context
                     , Grace.Domain
                     , Grace.Existential
                     , Grace.Input
                     , Grace.Import
                     , Grace.Interpret
                     , Grace.Infer
                     , Grace.Lexer
                     , Grace.Location
                     , Grace.Monotype
                     , Grace.Normalize
                     , Grace.Repl
                     , Grace.Parser
                     , Grace.Pretty
                     , Grace.Syntax
                     , Grace.TH
                     , Grace.Type
                     , Grace.Value

  default-language:    Haskell2010
  ghc-options:         -Wall

executable grace
  main-is:             Main.hs
  build-depends:       base
                     , grace
  hs-source-dirs:      grace
  default-language:    Haskell2010

test-suite tasty
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , filepath
                     , grace
                     , mtl
                     , prettyprinter
                     , safe-exceptions
                     , tasty
                     , tasty-hunit
                     , tasty-silver
                     , text
  hs-source-dirs:      tasty
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , doctest
  hs-source-dirs:      doctest
  default-language:    Haskell2010
  ghc-options:         -Wall
