cabal-version:       >=1.10
name:                grace
version:             1.0.0
license-file:        LICENSE
author:              Gabriella Gonzalez
maintainer:          Gabriel439@gmail.com
build-type:          Simple

library
  hs-source-dirs:      src

  build-depends:       base
                     , aeson
                     , Earley
                     , containers
                     , filepath
                     , generic-lens
                     , insert-ordered-containers
                     , lens
                     , megaparsec
                     , modern-uri
                     , mtl
                     , parser-combinators
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , safe-exceptions
                     , scientific
                     , string-interpolate
                     , template-haskell
                     , text >= 1.2.4.0
                     , unordered-containers

  exposed-modules:     Grace.Context
                     , Grace.Domain
                     , Grace.Existential
                     , Grace.Input
                     , Grace.Import
                     , Grace.Interpret
                     , Grace.Infer
                     , Grace.Location
                     , Grace.Monotype
                     , Grace.Normalize
                     , Grace.Parser
                     , Grace.Pretty
                     , Grace.Syntax
                     , Grace.HTTP
                     , Grace.TH
                     , Grace.Type
                     , Grace.Value
                     , Grace.Width

  other-modules:       Grace.Compat

  default-language:    Haskell2010

  ghc-options:         -Wall

  if impl(ghcjs)
    hs-source-dirs:    ghcjs
    build-depends:     ghcjs-base
                     , ghcjs-fetch
  else
    hs-source-dirs:    ghc
    build-depends:     ansi-terminal
                     , haskeline
                     , http-client
                     , http-client-tls
                     , http-types
                     , optparse-applicative
                     , repline
                     , terminal-size
    exposed-modules:   Grace
                     , Grace.REPL

executable grace
  main-is:             Main.hs

  build-depends:       base
                     , grace

  hs-source-dirs:      grace

  default-language:    Haskell2010
  if impl(ghcjs)
    buildable:         False

executable try-grace
  main-is:             Main.hs

  build-depends:       base
                     , aeson
                     , async
                     , ghcjs-base
                     , containers
                     , grace
                     , insert-ordered-containers
                     , mtl
                     , scientific
                     , stm
                     , text
                     , transformers
                     , uri-encode

  hs-source-dirs:      try-grace

  ghc-options:         -Wall

  default-language:    Haskell2010
  if !impl(ghcjs)
    buildable:         False

test-suite tasty
  type:                exitcode-stdio-1.0

  main-is:             Main.hs

  build-depends:       base
                     , directory
                     , filepath
                     , grace
                     , mtl
                     , prettyprinter
                     , safe-exceptions
                     , tasty
                     , tasty-hunit
                     , tasty-silver
                     , text

  hs-source-dirs:      tasty

  default-language:    Haskell2010

  ghc-options:         -Wall

test-suite doctest
  type:                exitcode-stdio-1.0

  main-is:             Main.hs

  build-depends:       base
                     , doctest

  hs-source-dirs:      doctest

  default-language:    Haskell2010

  ghc-options:         -Wall
