cabal-version:       >=1.10
name:                grace
version:             1.0.0
license-file:        LICENSE
author:              Gabriella Gonzalez
maintainer:          Gabriel439@gmail.com
build-type:          Simple
extra-source-files:  examples/**.ffg
                   , prompts/**.md
                   , prelude/**.ffg

library
  hs-source-dirs:      src

  build-depends:       base
                     , Earley
                     , aeson
                     , aeson-pretty
                     , aeson-yaml
                     , async
                     , binary
                     , bytestring
                     , containers
                     , case-insensitive
                     , filepath
                     , generic-lens
                     , http-types
                     , insert-ordered-containers
                     , lens
                     , megaparsec
                     , modern-uri
                     , mtl
                     , openai
                     , parser-combinators
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , safe-exceptions
                     , scientific
                     , string-interpolate
                     , template-haskell
                     , text >= 1.2.4.0
                     , time
                     , unordered-containers
                     , vector

  exposed-modules:     Grace.Aeson
                     , Grace.Context
                     , Grace.DataFile
                     , Grace.Decode
                     , Grace.Domain
                     , Grace.Encode
                     , Grace.Existential
                     , Grace.GitHub
                     , Grace.HTTP
                     , Grace.Input
                     , Grace.Import
                     , Grace.Interpret
                     , Grace.Infer
                     , Grace.Location
                     , Grace.Monotype
                     , Grace.Normalize
                     , Grace.Parser
                     , Grace.Pretty
                     , Grace.Prompt
                     , Grace.Syntax
                     , Grace.Type
                     , Grace.Value
                     , Grace.Width

  other-modules:       Grace.Compat
                     , Grace.HTTP.Type
                     , Grace.Marshal
                     , Paths_grace

  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , DataKinds
                     , DefaultSignatures
                     , DeriveAnyClass
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DerivingStrategies
                     , DuplicateRecordFields
                     , GeneralizedNewtypeDeriving
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , TypeOperators
                     , ViewPatterns

  default-language:    Haskell2010

  ghc-options:         -Wall -Wmissing-deriving-strategies

  if impl(ghcjs) || os(ghcjs)
    hs-source-dirs:    ghcjs
    build-depends:     ghcjs-base
                     , ghcjs-fetch
                     , ghcjs-prim
  else
    hs-source-dirs:    ghc
    build-depends:     ansi-terminal
                     , haskeline
                     , http-client
                     , http-client-tls
                     , optparse-applicative
                     , repline
                     , retry
                     , servant-client-core
                     , servant-client
                     , terminal-size
    exposed-modules:   Grace
                     , Grace.REPL
                     , Grace.TH

executable grace
  main-is:             Main.hs

  build-depends:       base
                     , grace

  hs-source-dirs:      grace

  default-language:    Haskell2010

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  if impl(ghcjs) || os(ghcjs)
    buildable:         False

executable try-grace
  main-is:             Main.hs

  build-depends:       base
                     , aeson
                     , async
                     , containers
                     , filepath
                     , ghcjs-base
                     , grace
                     , insert-ordered-containers
                     , lens
                     , mtl
                     , safe-exceptions
                     , scientific
                     , stm
                     , text
                     , transformers
                     , uri-encode

  hs-source-dirs:      try-grace

  ghc-options:         -Wall

  default-language:    Haskell2010
  if !(impl(ghcjs) || os(ghcjs))
    buildable:         False

test-suite tasty
  type:                exitcode-stdio-1.0

  main-is:             Main.hs

  build-depends:       base
                     , directory
                     , filepath
                     , grace
                     , mtl
                     , prettyprinter
                     , safe-exceptions
                     , tasty
                     , tasty-hunit
                     , tasty-silver
                     , text

  hs-source-dirs:      tasty

  default-language:    Haskell2010

  ghc-options:         -Wall

test-suite doctest
  type:                exitcode-stdio-1.0

  main-is:             Main.hs

  build-depends:       base
                     , doctest

  hs-source-dirs:      doctest

  default-language:    Haskell2010

  ghc-options:         -Wall
