cabal-version:       >=1.10
name:                grace-core
version:             1.0.0
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
build-type:          Simple

tested-with:         GHC ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.0.20210821

library
  hs-source-dirs:      src
  build-depends:       base
                     , ansi-terminal
                     , containers
                     , Earley
                     , exceptions
                     , filepath
                     , generic-lens
                     , insert-ordered-containers
                     , lens
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , parser-combinators
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , repline
                     , scientific
                     , string-interpolate
                     , terminal-size
                     , text
                     , unordered-containers
  exposed-modules:     Grace.Context
                     , Grace.Domain
                     , Grace.Existential
                     , Grace.Interpret
                     , Grace.Infer
                     , Grace.Lexer
                     , Grace.Location
                     , Grace.Monotype
                     , Grace.Normalize
                     , Grace.Parser
                     , Grace.Pretty
                     , Grace.Syntax
                     , Grace.Type
                     , Grace.Value
                     , Grace.Repl
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tasty
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , filepath
                     , grace-core
                     , mtl
                     , prettyprinter
                     , tasty
                     , tasty-hunit
                     , tasty-silver
                     , text
  hs-source-dirs:      tasty
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , doctest
                     , filepath
  hs-source-dirs:      doctest
  default-language:    Haskell2010
  ghc-options:         -Wall
