cabal-version:       >=1.10
name:                grace-resolver-builtin
version:             1.0.0
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
build-type:          Simple

tested-with:         GHC ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.0.20210821

library
  hs-source-dirs:      src
  build-depends:       base
                     , filepath
                     , grace-core
                     , modern-uri
                     , safe-exceptions
                     , text
                     , typed-process
  exposed-modules:     Grace.Resolver.Builtin
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tasty
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , filepath
                     , grace-core
                     , grace-resolver-builtin
                     , mtl
                     , prettyprinter
                     , tasty
                     , tasty-hunit
                     , tasty-silver
                     , text
  hs-source-dirs:      tasty
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , doctest
  hs-source-dirs:      doctest
  default-language:    Haskell2010
  ghc-options:         -Wall
